[project]
name = "jupyter-myst-build-proxy"
version = "0.5.0"
description = "Jupyter extension to proxy MyST build server"
authors = [{name = "Ryan Lovett"}]
requires-python = ">=3.8"
dependencies = [
    "jupyter-server-proxy>4.1.0",
]
keywords = ["Jupyter"]
classifiers = [
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
readme = "README.md"
license = {text = "BSD-3-Clause"}

[project.urls]
Homepage = "https://github.com/ryanlovett/jupyter-myst-build-proxy"
Repository = "https://github.com/ryanlovett/jupyter-myst-build-proxy"
Issues = "https://github.com/ryanlovett/jupyter-myst-build-proxy/issues"

[project.entry-points."jupyter_serverproxy_servers"]
myst-build = "jupyter_myst_build_proxy:setup_myst"

[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_myst_build_proxy/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
packages = ["jupyter_myst_build_proxy"]
include = [
    "jupyter_myst_build_proxy/*.py",
    "jupyter_myst_build_proxy/*.html",
    "jupyter_myst_build_proxy/*.svg"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_myst_build_proxy/labextension" = "share/jupyter/labextensions/jupyter-myst-build-proxy"
"install.json" = "share/jupyter/labextensions/jupyter-myst-build-proxy/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_myst_build_proxy/labextension/static/style.js",
    "jupyter_myst_build_proxy/labextension/package.json",
]
skip-if-exists = ["jupyter_myst_build_proxy/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_myst_build_proxy/labextension"


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/ryanlovett/jupyter-myst-build-proxy"

[tool.tbump.version]
current = "0.5.0"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to v{new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}"'
